[package]
name = "s3_union_find"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS SDK
aws-config = "1.1.1"
aws-sdk-s3 = "1.1.1"

# CLI argument parsing
clap = { version = "4.4.2", features = ["derive"] }

# Error handling
anyhow = "1.0.75"

# Parallel processing
rayon = "1.8.0"

# Byte reading/writing
byteorder = "1.5.0"

# Async runtime
tokio = { version = "1.33.0", features = ["full"] }

# Sorting
itertools = "0.11.0"